# clickhouse-transform

./: .gitignore  README.md  pyproject.toml
clickhouse_transform/: __init__.py  functions.py  model.py  pipeline.py  session.py  types.py
clickhouse_transform/codegen/: ddl.py
tests/: test_metadata.py
